# iaron-agent

./: ai_caller.py  excel.py  functions.py  main.py  requirements.txt  setup.py  upload_doc.py
Systems/ExcelMacros/: excel.py  gemini.py  main.py
Systems/FolderScan/: convert_data.py  gemini.py  main.py  upload_doc.py
Systems/GenerateDocx/: convert_data.py  docx_templates.json  gemini.py  main.py
Systems/IAron/: Dev Assistant.xlsx  README.md  extract_data.py  functions.py  gemini.py  gemini_config.py  gemini_data.py  inputs_examples.json  language_translation.py  main.py  upload_doc.py
Systems/IAron/script/: README.md
Systems/MailSender/: functions.py  gemini.py  mail_templates.json  main.py
artificial_intelligence/: chatbot.py  gemini.py
database/: macro_calls.json  select_function.json
development/script/: language_dict.py  main.py  pyproject.toml  run_script.ps1
development/script/installation/: instalar.ps1
languages/: CN.json  DE.json  EN.json  ES.json  FR.json  PT.json  translation.py
